PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(main ${DIR_SRCS})
INCLUDE_DIRECTORIES(./ ./MyDB ./sensor)
ADD_SUBDIRECTORY(Sensor)
ADD_SUBDIRECTORY(MySql)


SET(CMAKE_CXX_FLAGS "-std=c++11 -lpthread -lwiringPi")
EXECUTE_PROCESS(COMMAND mysql_config --cflags
		OUTPUT_VARIABLE MYSQL_CFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)

EXECUTE_PROCESS(COMMAND mysql_config --libs
                OUTPUT_VARIABLE MYSQL_LIBS OUTPUT_STRIP_TRAILING_WHITESPACE)

TARGET_COMPILE_OPTIONS(main PUBLIC ${MYSQL_CFLAGS})
TARGET_LINK_LIBRARIES(main ${MYSQL_LIBS})
TARGET_LINK_LIBRARIES(main mysql sensor)

